tests/error/errors_on_usage/var_in_modifier3.err
Error: Variable assigned in modifier block (at $FILE:20:11)
   | 
18 |     measure(q)
19 | 
20 |     return a
   |            ^ `a` cannot be used...

Note:
   | 
15 |             if b:
16 |                 a = 4
   |                 ----- ... since it was defined in a modifier block

Help: Variables assigned inside a modifier block are not available outside the
block

Guppy compilation failed due to 1 previous error
